--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,10 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "dom-to-image": "^2.2.1",
+    "downloadjs": "^1.4.7",
+    "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
     "pinia": "^3.0.1",
     "swiper": "^11.2.8",
     "vue": "^3.5.13",
@@ -29,7 +33,7 @@
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitest/eslint-plugin": "^1.1.39",
     "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/test-utils": "^2.4.6",
+    "@vue/test-utils": "^2.2.7",
     "eslint": "^9.22.0",
     "eslint-plugin-vue": "~10.0.0",
     "globals": "^16.0.0",
