--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
     "lint": "eslint . --fix",
     "format": "prettier --write src/"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
