--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "node ./src/index.js"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
