--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "date-fns": "^4.1.0",
     "dom-to-image": "^2.2.1",
     "downloadjs": "^1.4.7",
     "html-to-image": "^1.11.13",
