--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "date-fns": "^4.1.0",
     "dom-to-image": "^2.2.1",
+    "dotenv": "^17.2.1",
     "downloadjs": "^1.4.7",
     "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
